--- a/Frontend/pages/principal.html
+++ b/Frontend/pages/principal.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 20px;
-            font-family: Arial, sans-serif;
-        }
-    </style>
+    <title>Principal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bienvenido a la Página Principal</h1>
-    <!-- Aquí irá el contenido de tu página principal -->
+    <!-- Por ahora la página está en blanco como solicitaste -->
 </body>
 </html>
