--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
@@ -23,12 +23,12 @@
         </div>
         
         <div class="button-container">
-            <a href="#" class="button">Crear Cuenta</a>
-            <a href="#" class="button">Acceder</a>
+            <a href="/Frontend/pages/registro.html" class="button">Crear Cuenta</a>
+            <a href="/Frontend/pages/principal.html" class="button">Acceder</a>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
